--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,13 @@
         <section class="profile page__section">
           <div class="profile__image"></div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button
               class="profile__edit-button"
               type="button"
               aria-label="редактировать профиль"
             ></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button
             class="profile__add-button"
@@ -51,21 +51,35 @@
             aria-label="закрыть"
           ></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form" name="edit-profile">
+          <form class="popup__form" name="edit-profile" novalidate>
             <input
               type="text"
               name="name"
+              id="name-input"
+              minlength="2"
+              maxlength="40"
               class="popup__input popup__input_type_name"
               placeholder="Имя"
+              aria-label="Имя"
+              pattern="^[A-Za-zА-Яа-яЁё\-\s]+"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
+            <span class="name-input-error"></span>
             <input
               type="text"
               name="description"
+              id="description-input"
+              minlength="2"
+              maxlength="200"
               class="popup__input popup__input_type_description"
               placeholder="Занятие"
+              aria-label="Занятие"
+              pattern="^[A-Za-zА-Яа-яЁё\-\s]+"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
+            <span class="description-input-error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -80,21 +94,31 @@
             aria-label="закрыть"
           ></button>
           <h3 class="popup__title">Новое место</h3>
-          <form class="popup__form" name="new-place">
+          <form class="popup__form" name="new-place" novalidate>
             <input
               type="text"
               name="place-name"
+              id="place-name-input"
+              minlength="2"
+              maxlength="30"
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
+              aria-label="Название места"
+              pattern="^[A-Za-zА-Яа-яЁё\-\s]+"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
               required
             />
+            <span class="place-name-input-error"></span>
             <input
               type="url"
               name="link"
+              id="link-input"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
+              aria-label="Ссылка на изображение"
               required
             />
+            <span class="link-input-error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -124,11 +148,14 @@
         ></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button
-            type="button"
-            class="card__like-button"
-            aria-label="лайк"
-          ></button>
+          <div class="card__like-container">
+            <button
+              type="button"
+              class="card__like-button"
+              aria-label="лайк"
+            ></button>
+            <p class="card__like-count">1</p>
+          </div>
         </div>
       </li>
     </template>
