--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,31 @@
           </form>
         </div>
       </div>
+      <div class="popup popup_is-animated popup_type_change_avatar">
+        <div class="popup__content">
+          <button
+            type="button"
+            class="popup__close"
+            aria-label="закрыть"
+          ></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <form class="popup__form" name="change-avatar" novalidate>
+            <input
+              type="url"
+              name="avatar"
+              id="avatar-input"
+              class="popup__input popup__input_type_url"
+              placeholder="Ссылка на аватар"
+              aria-label="Ссылка на аватар"
+              required
+            />
+            <span class="avatar-input-error"></span>
+            <button type="submit" class="button popup__button">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
       <div class="popup popup_is-animated popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button
